--- a/Road_map_c++.vcxproj
+++ b/Road_map_c++.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="Road_map_c++.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
+    <ClInclude Include="phone_class.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
